# cultini_AI

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  render.yaml
app/: __init__.py  config.py  contributions.py  conversations.py  feedback.py  ingest.py  list_models.py  main.py  metrics.py  moderation.py  rag.py
corpus/: bijou_argent_tiznit.json  bijou_emaillage.json  bijou_fibule.json  ecriture_tifinagh.json  ecriture_varietes_tamazight.json  gastronomie_caractere_regional.json  gastronomie_pains_regionaux.json  gastronomie_tafarnout.json  gastronomie_tagoulla.json  la_tabzimt_fibule_kabyle.json  motif_losange.json  motif_variation_regionale.json  motif_yaz.json  technique_azetta_metier.json  technique_teintures_naturelles.json
data/: feedback.db
data/qdrant_data/: meta.json
data/qdrant_data/collection/azetta_fiches/: storage.sqlite
docs/: README.md
