[project]
name = "azetta-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-llms-google-genai>=0.9.5",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.47.0",
]
